Refactor contributing documentation and add performance optimization guidelines

--- a/development.mdx
+++ b/development.mdx
@@ -1,51 +1,9 @@
 ---
-title: 'Development'
-description: 'Preview changes locally to update your docs'
+title: Development Guide
+description: 'Guidelines and instructions for developing on the AI Platform'
 ---
 
-<Info>
-  **Prerequisite**: Please install Node.js (version 19 or higher) before proceeding.
-</Info>
-
-Follow these steps to install and run Mintlify on your operating system:
-
-**Step 1**: Install Mintlify:
-
-<CodeGroup>
-
-  ```bash npm
-  npm i -g mintlify
-  ```
-
-```bash yarn
-yarn global add mintlify
-```
-
-</CodeGroup>
-
-**Step 2**: Navigate to the docs directory (where the `mint.json` file is located) and execute the following command:
-
-```bash
-mintlify dev
-```
-
-A local preview of your documentation will be available at `http://localhost:3000`.
-
-### Custom Ports
-
-By default, Mintlify uses port 3000. You can customize the port Mintlify runs on by using the `--port` flag. To run Mintlify on port 3333, for instance, use this command:
-
-```bash
-mintlify dev --port 3333
-```
-
-If you attempt to run Mintlify on a port that's already in use, it will use the next available port:
-
-```md
-Port 3000 is already in use. Trying 3001 instead.
-```
-
-## Mintlify Versions
+## Development Setup
 
 Please note that each CLI release is associated with a specific version of Mintlify. If your local website doesn't align with the production version, please update the CLI:
 
@@ -72,14 +30,13 @@ mintlify broken-links
 ## Deployment
 
 <Tip>
-  Unlimited editors available under the [Pro
-  Plan](https://mintlify.com/pricing) and above.
+  Unlimited editors available under the [Pro Plan](https://mintlify.com/pricing) and above.
 </Tip>
 
 If the deployment is successful, you should see the following:
 
 <Frame>
-  <img src="/images/checks-passed.png" style={{ borderRadius: '0.5rem' }} />
+  <img src="/images/checks-passed.png" style="border-radius: 0.5rem;" />
 </Frame>
 
 ## Code Formatting
@@ -88,19 +45,20 @@ We suggest using extensions on your IDE to recognize and format MDX. If you're a
 
 ## Troubleshooting
 
-<AccordionGroup>
-  <Accordion title='Error: Could not load the "sharp" module using the darwin-arm64 runtime'>
+### Common Issues
 
-    This may be due to an outdated version of node. Try the following:
-    1. Remove the currently-installed version of mintlify: `npm remove -g mintlify`
-    2. Upgrade to Node v19 or higher.
-    3. Reinstall mintlify: `npm install -g mintlify`
-  </Accordion>
+- **Mintlify CLI Not Updating:**
+  - **Solution:** Ensure you have the latest version by running `npm i -g mintlify@latest` or `yarn global upgrade mintlify`.
 
-  <Accordion title="Issue: Encountering an unknown error">
-  
-    Solution: Go to the root of your device and delete the \~/.mintlify folder. Afterwards, run `mintlify dev` again.
-  </Accordion>
-</AccordionGroup>
+- **Broken Links Detected:**
+  - **Solution:** Run `mintlify broken-links` to identify and fix broken links in your documentation.
 
-Curious about what changed in the CLI version? [Check out the CLI changelog.](https://www.npmjs.com/package/mintlify?activeTab=versions)
+- **Deployment Fails:**
+  - **Solution:** Check the deployment logs for errors. Ensure all environment variables are correctly set and that you have the necessary permissions.
+
+### Additional Resources
+
+- [Mintlify Documentation](https://mintlify.com/docs)
+- [Support](https://mintlify.com/support)
+
+---
